Fix font and z-index values for header/sidebar

--- a/header-sidebar.css
+++ b/header-sidebar.css
@@ -15,19 +15,18 @@
   height: 100%;
   width: 160px;
   position: fixed;
-  z-index: 150;
+  z-index: 1;
   top: 85px;
   left: 0px;
   background-color: #2c3b41;
   color: #4b646f;
-  font-family: 'Anonymous Pro', monospace;
   overflow-x: hidden;
   border-right: 1px solid #656565;
-  z-index: 2;
   box-shadow: 1px 1px 5px 0 rgba(0, 0, 0, .20);
 }
 
 .sidebar a {
+  font-family: 'Roboto Condensed', sans-serif;
   background-color: #2c3b41;
   color: #b8c7ce;
   display: block;
@@ -57,7 +56,7 @@
   margin: 0 auto;
   height: 85px;
   width: 100%;
-  z-index: 150;
+  z-index: 1;
   box-shadow: 1px 5px 5px 0 rgba(0, 0, 0, .20);
 }
 
@@ -72,6 +71,7 @@
 }
 
 .accountbar {
+  font-family: 'Roboto Condensed', sans-serif;
   float: right;
   margin-right: 30px;
   margin-top: 30px;
